# battery_health

./: Analyzer.cpp  Analyzer.h  BatteryReader.cpp  BatteryReader.h  CMakeLists.txt  Logger.cpp  Logger.h  README.md  Utils.cpp  Utils.h  main.cpp
.github/workflows/: build.yml
